Create base of the recipe form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,8 @@
       "@nuxt/types",
       "@types/node",
       "@nuxtjs/i18n",
+      "@types/lodash-es",
+      "@types/validator",
     ]
   },
   "vueCompilerOptions": {
