--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
     "@mdi/js": "^7.0.96",
     "@nuxtjs/composition-api": "^0.33.1",
     "@nuxtjs/i18n": "^7.3.0",
+    "@types/validator": "^13.7.6",
+    "@vuex-orm/core": "^0.36.4",
+    "@vuex-orm/plugin-axios": "^0.9.4",
     "core-js": "^3.19.3",
+    "lodash-es": "^4.17.21",
     "mdi-vue": "^3.0.13",
     "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
+    "vue": "^2.7.10",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
+    "vuex": "^4.0.2",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/vuetify": "^1.12.3",
+    "@types/lodash-es": "^4.17.6",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
