--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "t_website",
+  "name": "my-recipes",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,33 +10,60 @@
     "test": "jest"
   },
   "dependencies": {
-    "@mdi/js": "^7.0.96",
-    "@nuxtjs/composition-api": "^0.33.1",
-    "@nuxtjs/i18n": "^7.3.0",
-    "@types/validator": "^13.7.6",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.27.0",
     "@vuex-orm/core": "^0.36.4",
     "@vuex-orm/plugin-axios": "^0.9.4",
-    "core-js": "^3.19.3",
+    "core-js": "^3.14.0",
+    "date-fns": "^2.22.1",
     "lodash-es": "^4.17.21",
-    "mdi-vue": "^3.0.13",
     "nuxt": "^2.15.8",
-    "vue": "^2.7.10",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify": "^2.6.1",
-    "vuex": "^4.0.2",
-    "webpack": "^4.46.0"
+    "postscribe": "^2.0.8",
+    "ts-md5": "^1.2.7",
+    "validator": "^13.6.0",
+    "vue": "^2.6.12",
+    "vue-fragment": "^1.5.2",
+    "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.6.2",
+    "vuex-composition-helpers": "^1.0.23",
+    "vuex-pathify": "^1.4.5",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.8",
+    "@faker-js/faker": "^7.2.0",
+    "@mdi/js": "^6.1.95",
+    "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/eslint-config-typescript": "^6.0.1",
+    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.3",
-    "@types/lodash-es": "^4.17.6",
-    "@vue/test-utils": "^1.3.0",
+    "@types/jest": "^28.1.1",
+    "@types/lodash-es": "^4.17.5",
+    "@types/node": "^18.7.13",
+    "@types/validator": "^13.1.4",
+    "@vue/runtime-dom": "^3.2.37",
+    "@vue/test-utils": "^1.2.1",
+    "axios-mock-adapter": "^1.19.0",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.4",
+    "eslint": "^7.28.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "flush-promises": "^1.0.2",
     "jest": "^27.4.4",
+    "jest-environment-jsdom": "^27.1.1",
+    "jest-mock": "^27.1.1",
+    "jest-serializer-vue-tjw": "^3.19.0",
+    "jest-transform-stub": "^2.0.0",
     "ts-jest": "^27.1.1",
     "vue-jest": "^3.0.4"
+  },
+  "jestSerializer": {
+    "removeComments": true,
+    "clearInlineFunctions": true,
+    "attributesToClear": [
+      "fragment",
+      "rules"
+    ]
   }
 }
