--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "validator": "^13.6.0",
     "vue": "^2.6.12",
     "vue-fragment": "^1.5.2",
+    "vue-server-renderer": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
     "vuex": "^3.6.2",
     "vuex-composition-helpers": "^1.0.23",
@@ -42,7 +43,7 @@
     "@types/node": "^18.7.13",
     "@types/validator": "^13.1.4",
     "@vue/runtime-dom": "^3.2.37",
-    "@vue/test-utils": "^1.2.1",
+    "@vue/test-utils": "^1.3.0",
     "axios-mock-adapter": "^1.19.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
