--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime-corejs3": "^7.18.9",
     "@faker-js/faker": "^7.2.0",
     "@mdi/js": "^6.1.95",
     "@nuxt/types": "^2.15.7",
